feat: Add stockprices/ma endpoint
