# docs/swagger.yaml
@@ -103,7 +103,15 @@ info:
 paths:
   /companies:
     get:
-      description: Dashboardアプリに登録されている企業の基本情報を取得します。
+      description: 銘柄コードで指定した特定の企業についての詳細情報を取得する
+      parameters:
+      - description: 銘柄コード
+        in: path
+        maxLength: 16
+        minLength: 4
+        name: stockCode
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -111,13 +119,59 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.CompanyWrapper'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.HTTPError'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.HTTPError'
-      summary: Dashboardアプリに登録されている企業情報一覧を取得
+      summary: 銘柄コードで指定した特定の企業情報を取得
       tags:
       - companies
+  /stockprices/ma/{stockCode}:
+    get:
+      description: 指定の企業について、指定の計算方法による移動平均株価を取得する
+      parameters:
+      - description: 銘柄コード
+        in: path
+        maxLength: 16
+        minLength: 4
+        name: stockCode
+        required: true
+        type: string
+      - description: 移動平均の計算方法 + 計算日数のセットをカンマ区切りで指定 ex) sma5,ema25
+        in: query
+        name: maTypes
+        required: true
+        type: string
+      - description: 株価データ取得の開始日 YYYY-MM-DDの形式で指定
+        in: query
+        name: startDate
+        type: string
+      - description: 株価データ取得の終了日 YYYY-MM-DDの形式で指定
+        in: query
+        name: endDate
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.RawStockPriceWrapper'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.HTTPError'
+      summary: 移動平均株価データを取得
+      tags:
+      - stockprices
   /stockprices/rawdata/{stockCode}:
     get:
       description: 指定の企業について、株価の生データ(open/high/low/close/volume)を取得する
