# routers/routers.go
@@ -28,6 +28,7 @@ func InitRouter() *gin.Engine {
 		stockprices := v1.Group("/stockprices")
 		{
 			stockprices.GET("rawdata/:stockCode", c.GetRawStockPrices)
+			stockprices.GET("ma/:stockCode", c.GetStockPricesMA)
 		}
 	}
 
